// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: PostComponent renders 1`] = `
<View
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "flex": 1,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#25282D",
          },
          {
            "fontFamily": "Poppins-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0.005,
            "lineHeight": 22,
            "textAlign": "left",
          },
        ]
      }
    >
      I'm a ninja turtle that is a teenager.
    </Text>
  </View>
</View>
`;

exports[`component: PostComponent renders image posts 1`] = `
<View
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`component: PostComponent renders textImage posts 1`] = `
<View
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View>
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0.025,
              "textAlign": "left",
            },
          ],
          {
            "margin": 16,
          },
        ]
      }
    >
      Hello world
    </Text>
  </View>
</View>
`;
